package org.example.fabricas;

import org.example.teoremaparada.EstrategiaDetencion;

public interface FabricaEstrategias {
    EstrategiaDetencion fabricar();
}
