package org.example.programa;

public class ProgramaFactorial extends Programa {

    private int numero;

    public ProgramaFactorial(int numero) {
        this.numero = numero;
    }

    @Override
    protected void cargarCodigo(){
        // Implementación específica para cargar el código del programa factorial
    }

    @Override
    protected void configurarEntrada() {
        // Implementación específica para configurar la entrada del programa factorial
    }

    @Override
    protected void ejecutarPrograma() {
        // Implementación específica para ejecutar el programa factorial
    }

    @Override
    protected void accionBucleInfinito() {
        // Implementación específica para el manejo de bucle infinito en el programa factorial
    }

    @Override
    protected void accionTerminacion() {
        // Implementación específica para el manejo de terminación del programa factorial
    }
}
