package org.example.teoremaparada;

import org.example.programa.Programa;

public interface EstrategiaDetencion {
    boolean detectarBucle(Programa programa);
}
