package org.example.teoremaparada;

import org.example.programa.Programa;

public class EstrategiaTeoremaParada implements EstrategiaDetencion{
        @Override
        public boolean detectarBucle(Programa programa) {
            // Implementa aquí la lógica de detección de bucle según el teorema de la parada
            // Retorna true si se detecta un bucle infinito, false en caso contrario
            // Tu implementación específica del teorema de la parada iría aquí
            // ...
            return false; // Ejemplo de retorno fijo (sin detección de bucle)
        }


}
